--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* para comentar en css3*/
+
 
 
 body {
@@ -77,3 +79,82 @@ footer {
   background-color: #e9ecef;
   font-size: 0.9rem;
 }
+
+.imagen-seccion {
+  width: 50%;
+  max-width: 100px;   /* evita que la imagen desborde de su contenedor*/
+  height: auto;
+  margin-top: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+
+.carrusel {
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0;
+}
+
+.carrusel-container {
+  display: flex;
+  width: 60%;
+  animation: scroll 15s infinite linear;
+}
+
+.slide {
+  width: 90%;
+  flex-shrink: 0;
+}
+
+.slide img {
+  width: 90%;
+  height: auto;
+  display: block;
+}
+
+@keyframes scroll {
+  0%   { transform: translateX(0%); }
+  33%  { transform: translateX(-100%); }
+  66%  { transform: translateX(-200%); }
+  100% { transform: translateX(0%); }
+}
+
+
+.galeria-horizontal .container-horizontal {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 30px auto;
+}
+
+.galeria-horizontal img {
+  width: 22%;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+.horizontal {
+  display: flex;
+  align-items: center;
+  gap: 20px; /* espacio entre texto e imagen */
+  flex-wrap: wrap; /* para que se acomode en pantallas pequeñas */
+}
+
+.horizontal .texto {
+  flex: 1;
+  min-width: 250px;
+}
+
+.horizontal .imagen img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  max-height: 250px; /* ajusta según necesites */
+}
+
